--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,9 @@
     <div class="col">
       <div class="card">
         <div class="card-body p-4">
-          <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="far fa-calendar-alt"></i></div>
+          <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+            <i class="far fa-calendar-alt"></i>
+          </div>
           <h4 class="card-title" style="color: rgb(58,59,69);">Расписание</h4>
           <p class="card-text">выгрузка расписания преподавателя (iCal, xlsx)<br></p>
         </div>
@@ -21,7 +23,9 @@
       <div class="col">
         <div class="card">
           <div class="card-body p-4">
-            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-receipt"></i></div>
+            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+              <i class="fas fa-receipt"></i>
+            </div>
             <h4 class="card-title" style="color: rgb(58,59,69);">Нагрузка</h4>
             <p class="card-text">формирование отчета о нагрузке за месяц / семестр<br></p>
           </div>
@@ -30,7 +34,9 @@
       <div class="col">
         <div class="card">
           <div class="card-body p-4">
-            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-layer-group"></i></div>
+            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+              <i class="fas fa-layer-group"></i>
+            </div>
             <h4 class="card-title" style="color: rgb(58,59,69);">Учебные планы</h4>
             <p class="card-text">работа с компетенциями и их индикаторами</p>
           </div>
@@ -39,7 +45,9 @@
       <div class="col">
         <div class="card">
           <div class="card-body p-4">
-            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-clipboard-list"></i></div>
+            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+              <i class="fas fa-clipboard-list"></i>
+            </div>
             <h4 class="card-title" style="color: rgb(58,59,69);">Программы</h4>
             <p class="card-text">проверка заполнения полей рабочих программ</p>
           </div>
@@ -48,7 +56,9 @@
       <div class="col">
         <div class="card">
           <div class="card-body p-4">
-            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon"><i class="fas fa-book-open"></i></div>
+            <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
+              <i class="fas fa-book-open"></i>
+            </div>
             <h4 class="card-title" style="color: rgb(58,59,69);">Обеспечение</h4>
             <p class="card-text">загрузка обеспечивающих материалов в рабочие программы</p>
           </div>
