programs app template update

--- a/app/templates/load/load_report.html
+++ b/app/templates/load/load_report.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container-fluid">
-  <h3 class="text-center text-dark mb-1"><span style="color: rgb(33, 37, 41);">
-    {% block title %}Отчет о нагрузке{% endblock %}</span>
+  <h3 class="text-center text-dark mb-1">
+    {% block title %}Отчет о нагрузке{% endblock %}
   </h3>
 </div>
 <form method="post">
