--- a/app/templates/programs/field_edit.html
+++ b/app/templates/programs/field_edit.html
@@ -1,44 +1,46 @@
+{% extends 'base.html' %}
+{% block content %}
 <div class="container-fluid">
-    <h3 class="text-center text-dark mb-1">Редактирование поля рабочей программы<br></h3>
+  <h3 class="text-center text-dark mb-1">
+    {% block title %}Редактирование поля рабочей программы{% endblock %}
+  </h3>
 </div>
 <form method="post">
+  {{ form.hidden_tag() }}
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8">
-                <h4 class="fw-lighter text-center text-primary mt-2 mb-2">Административное право {{ wp_name }}<br></h4>
-                <div class="row mb-2">
-                    <div class="col"><label class="form-label text-dark" id="fields_data_label" name="fields_data_label">Поле рабочей программы:</label>
-                      <select class="form-select" id="fields_data" name="fields_data">
-                            <optgroup label="Выберите год:">
-                                <option value="13">This is item 2</option>
-                                <option value="14">This is item 3</option>
-                            </optgroup>
-                        </select>
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col">
-                      <button class="btn btn-secondary mb-1 mt-1" id="fields_data" type="button" name="fields_data">Выбрать</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="card shadow mb-2">
-                            <div class="card-header py-3">
-                                <p class="text-center text-primary m-0 fw-bold" id="wp_field_edit_label" name="wp_field_edit_label">{{ form.wp_field_edit.label }}<br></p>
-                            </div>
-                            <div class="card-body">
-                              <textarea class="form-control" id="wp_field_edit" rows="8" name="wp_field_edit"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col mb-3">
-                      <button class="btn btn-info link-light" id="field_update" type="button" style="width: 100%;font-weight: bold;border-style: none;" name="field_update">Обновить</button>
-                    </div>
-                </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-xl-8">
+          <h4 class="fw-lighter text-center text-primary mt-2 mb-2">{{ wp_name }}<br></h4>
+          <div class="row mb-2">
+            <div class="col">
+              {{ form.wp_fields.label(class="text-dark") }}
+              {{ form.wp_fields(class="form-select") }}
             </div>
+          </div>
+          <div class="row mb-2">
+            <div class="col">
+              {{ form.fields_data(class="btn btn-secondary mb-1 mt-1", type="submit") }}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card shadow mb-2">
+                <div class="card-header py-3">
+                  {{ form.wp_field_edit.label(class="text-center text-primary m-0 fw-bold") }}
+                </div>
+                <div class="card-body">
+                  {{ form.wp_field_edit(class="form-control", rows="8", value=wp_field_data) }}
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col mb-3">
+              {{ form.field_update(class="btn btn-info link-light", type="submit", style="width: 100%;font-weight: bold;border-style: none;") }}
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 </form>
+{% endblock %}
